Small change to fix which title displays on mobile (#4)
- I was still having issues on mobile portrait with the long title displaying
so I changed it to only show the chrisbarnard.blog text

--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -203,8 +203,8 @@
     }
 }
 
-@media screen and (max-width: 40rem) {
-    .menuName {
+@media screen and (max-width: 45rem) {
+    .menuSiteTitle {
         display: none;
     }
 }
